--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,14 @@
     </properties>
     <dependencies>
         <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>5.2.5</version> </dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.5</version> </dependency>
+        <dependency>
     <groupId>com.formdev</groupId>
     <artifactId>flatlaf-intellij-themes</artifactId>
     <version>3.6.1</version>
